--- a/a2-1.ipynb
+++ b/a2-1.ipynb
@@ -66,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0.0-rc0\n"
+      "2.0.0\n"
      ]
     }
    ],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1616,8 +1616,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The flowers model is working in the browser as shown below\n",
-    "Insert image"
+    "### The flowers model is working in the browser. See below website:\n",
+    "http://muftayebaly.com/apps/deepflowers/"
    ]
   },
   {
@@ -2167,6 +2167,207 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
+    "BATCH_SIZE = 32\n",
+    "IMG_SIZE = 300\n",
+    "SHUFFLE_SIZE = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from http://muftayebaly.com/dropbox/ColumbiaLandmarks.zip\n",
+      "1179688960/1179680798 [==============================] - 118s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pathlib\n",
+    "data_root_orig = tf.keras.utils.get_file(origin='http://muftayebaly.com/dropbox/ColumbiaLandmarks.zip',\n",
+    "                                         fname='ColumbiaLandmarks.zip', extract=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/Muf/.keras/datasets/ColumbiaLandmarks\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_root = str(pathlib.Path(data_root_orig).parents[0])+'/ColumbiaLandmarks'\n",
+    "print(data_root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 225 images belonging to 4 classes.\n",
+      "Found 225 images belonging to 4 classes.\n",
+      "data batch shape: (32, 300, 300, 3)\n",
+      "labels batch shape: (32,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "datagen = ImageDataGenerator(rescale=1./255, validation_split=0.5)\n",
+    "train_gen = datagen.flow_from_directory(\n",
+    "        data_root,\n",
+    "        target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        shuffle=True,\n",
+    "        subset=\"training\",\n",
+    "        class_mode=\"binary\")\n",
+    "\n",
+    "validation_gen = datagen.flow_from_directory(\n",
+    "        data_root,\n",
+    "        target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "        batch_size=BATCH_SIZE,\n",
+    "        shuffle=True,\n",
+    "        subset=\"validation\",\n",
+    "        class_mode=\"binary\")\n",
+    "\n",
+    "for data_batch, labels_batch in train_gen:\n",
+    "    print('data batch shape:', data_batch.shape)\n",
+    "    print('labels batch shape:', labels_batch.shape)\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'butler_library', 1: 'le_marteleur', 2: 'the_curl', 3: 'whispering_bench'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "landmark_classes = {y:x for x,y in train_gen.class_indices.items()}\n",
+    "print(landmark_classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le_marteleur\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(landmark_classes[labels_batch[6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_dataset_into_test_and_train_sets(all_data_dir, training_data_dir, testing_data_dir, testing_data_pct):\n",
+    "    # Recreate testing and training directories\n",
+    "    if testing_data_dir.count('/') > 1:\n",
+    "        shutil.rmtree(testing_data_dir, ignore_errors=False)\n",
+    "        os.makedirs(testing_data_dir)\n",
+    "        print(\"Successfully cleaned directory \" + testing_data_dir)\n",
+    "    else:\n",
+    "        print(\"Refusing to delete testing data directory \" + testing_data_dir + \" as we prevent you from doing stupid things!\")\n",
+    "\n",
+    "    if training_data_dir.count('/') > 1:\n",
+    "        shutil.rmtree(training_data_dir, ignore_errors=False)\n",
+    "        os.makedirs(training_data_dir)\n",
+    "        print(\"Successfully cleaned directory \" + training_data_dir)\n",
+    "    else:\n",
+    "        print(\"Refusing to delete testing data directory \" + training_data_dir + \" as we prevent you from doing stupid things!\")\n",
+    "\n",
+    "    num_training_files = 0\n",
+    "    num_testing_files = 0\n",
+    "\n",
+    "    for subdir, dirs, files in os.walk(all_data_dir):\n",
+    "        category_name = os.path.basename(subdir)\n",
+    "\n",
+    "        # Don't create a subdirectory for the root directory\n",
+    "        print(category_name + \" vs \" + os.path.basename(all_data_dir))\n",
+    "        if category_name == os.path.basename(all_data_dir):\n",
+    "            continue\n",
+    "\n",
+    "        training_data_category_dir = training_data_dir + '/' + category_name\n",
+    "        testing_data_category_dir = testing_data_dir + '/' + category_name\n",
+    "\n",
+    "        if not os.path.exists(training_data_category_dir):\n",
+    "            os.mkdir(training_data_category_dir)\n",
+    "        \n",
+    "        if not os.path.exists(testing_data_category_dir):\n",
+    "            os.mkdir(testing_data_category_dir)\n",
+    "\n",
+    "        for file in files:\n",
+    "            input_file = os.path.join(subdir, file)\n",
+    "            if np.random.rand(1) < testing_data_pct:\n",
+    "                shutil.copy(input_file, testing_data_dir + '/' + category_name + '/' + file)\n",
+    "                num_testing_files += 1\n",
+    "            else:\n",
+    "                shutil.copy(input_file, training_data_dir + '/' + category_name + '/' + file)\n",
+    "                num_training_files += 1\n",
+    "\n",
+    "    print(\"Processed \" + str(num_training_files) + \" training files.\")\n",
+    "    print(\"Processed \" + str(num_testing_files) + \" testing files.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -2183,6 +2384,14 @@
     "\n",
     "Link to upload a zip is on CourseWorks. Your file should be in the same format as the flowers dataset (the directory names gives the label for each image).\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset found at the url below:\n",
+    "http://muftayebaly.com/dropbox/ColumbiaLandmarks.zip"
    ]
   },
   {
@@ -2234,7 +2443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
